--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "pretest": "npm run htmlhint && npm run eslint && npm run stylelint",
     "test": "jest --coverage",
     "dev": "vite dev src",
-    "start": "npm run dev",
+    "start": "npm run dev serve src/-s",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-env": "^7.19.4", 
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.18.2",
