--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.19.4", 
+    "@babel/preset-env": "^7.19.4",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -41,5 +41,8 @@
     "createdAt": "2023-06-06T21:37:46.504Z",
     "version": "6.3.0",
     "commit": "a942adeb868f1fe54b86e34cc4fc4ddb0601700d"
+  },
+  "dependencies": {
+    "firebase": "^9.22.2"
   }
 }
