Arreglo CSS. vista desktop y celular

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "stylelint": "stylelint --aei src/**/*.css",
     "pretest": "npm run htmlhint && npm run eslint && npm run stylelint",
     "test": "jest --env=jsdom --coverage",
-    "dev": "vite dev src",
-    "start": "npm run dev serve src/-s",
+    "dev": "vite dev src --host",
+    "start": "npm run dev",
     "build": "vite build",
     "preview": "vite preview"
   },
